--- a/package.json
+++ b/package.json
@@ -6,9 +6,24 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "aws-amplify": "^2.2.2",
+    "crypto-js": "^3.1.9-1",
+    "nanoid": "^2.1.11",
     "react": "^16.12.0",
+    "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "react-feather": "^2.0.3",
+    "react-helmet-async": "^1.0.4",
+    "react-input-slider": "^5.1.4",
+    "react-load-script": "0.0.6",
+    "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.1",
+    "react-tag-autocomplete": "^6.0.0-beta.4",
+    "react-transition-group": "^4.3.0",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
