--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-tag-autocomplete": "^6.0.0-beta.4",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "timeago-react": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
