--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "@testing-library/user-event": "^7.2.1",
     "aws-amplify": "^2.2.5",
     "client-compress": "^2.1.2",
-    "crypto-js": "^4.0.0",
     "nanoid": "^2.1.11",
     "rc-slider": "^9.2.1",
     "react": "^16.12.0",
     "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.3",
+    "react-ga": "^2.7.0",
     "react-helmet-async": "^1.0.4",
     "react-load-script": "0.0.6",
     "react-redux": "^7.2.0",
@@ -25,6 +25,7 @@
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
+    "secure-ls": "^1.2.6",
     "timeago-react": "^3.0.0"
   },
   "scripts": {
